<resources>
    <string name="app_name">Market Lens</string>
    <string name="entermobileno">Enter Mobile Number</string>
    <string name="mobileno">Mobile Number</string>
    <string name="forgetpassword">Forget your password?</string>
    <string name="login">Login</string>
    <string name="donthaveaccount">Don\'t have an account ?</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="nointernet">No internet</string>
    <string name="verificationcode">Verification Code</string>
    <string name="otp">OTP</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="marketlens">Market Lens</string>
    <string name="topservice">Top services</string>
    <string name="latestvideos">Latest videos</string>
    <string name="latestvideosdesc">It is a long established fact that a reader will be distracted by the readable content</string>
    <string name="ourservice">Our Services</string>
    <string name="iagreetermcondition">I agree Terms and Conditions</string>
    <string name="viewmore">View More</string>
    <string name="home">Home</string>
    <string name="myonlinecourse">My Online Courses</string>
    <string name="myweeklycourse">"My Weekly Courses "</string>
    <string name="editprofile">Edit Profile</string>
    <string name="mynotification">My Notifications</string>
    <string name="aboutus">About Us</string>
    <string name="needhelp">Need Help?</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termsconditions"><![CDATA[Terms & Condition]]></string>
    <string name="shareus">Share Us</string>
    <string name="logout">Logout</string>
    <string name="featuredvideos">Featured videos</string>
    <string name="ourlatestonlinecourse">Our Latest Online Courses</string>
    <string name="latestonlinedesc">It is a long established fact that a reader will be distracted by the</string>
    <string name="onlinecourses">Online Courses</string>
    <string name="verificationcodedes">Verification code has been sent to your mobile number. Please wait we are verifying you.</string>
    <string name="verifynow">Verify now</string>
    <string name="resendotp">Resend OTP</string>
    <string name="marketlenscalculator">Market Lens Calculator</string>
    <string name="marketlenscalculatordesc">It is a long established fact that a reader will be distracted by the readable content. It is a long established fact that a reader will be distracted by the readable content. It is a long established fact that a reader will be distracted by the readable content. It is a long established fact that a reader will be distracted by the readable content it is long established fact that......</string>
    <string name="description">Description</string>
    <string name="chooseaplan">CHOOSE A PLAN</string>
    <string name="subscriptionperiod">Subscription Period</string>
    <string name="forbegnieradvance">For Beginner to advance</string>
    <string name="watchsamplevideo">Watch Sample Video</string>
    <string name="followusonfb">Follow Us On Facebook</string>
    <string name="connectnow">Connect Now</string>
    <string name="onlineworkshop">Online WorkShop</string>
    <string name="stockmarkettraining">"Stock Market Training "</string>
    <string name="courseinfo">Course Info</string>
    <string name="contentvideos">Content Videos</string>
    <string name="viewall">View All</string>
    <string name="chooseplan">Choose Plan</string>
    <string name="totalprice">Total Price</string>
    <string name="discount">Discount</string>
    <string name="amounttobepaid">Amount to be Paid</string>
    <string name="subscrivenow">Subscribe now</string>
    <string name="rone">R1</string>
    <string name="rtwo">R2</string>
    <string name="pivot">Pivot</string>
    <string name="sone">S1</string>
    <string name="stwo">S2</string>
    <string name="note">*Note :</string>
    <string name="niftylevel">Nifty Levels</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="player_activity_name">Media player</string>

</resources>