<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <!--<variable
            name="viewModel"
            type="com.example.myapplication.loginView.LoginViewModel" />-->
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/twoenty">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/log_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/sixty"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobileno_edittxt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/log_img"
                android:hint="@string/entermobileno"
                android:inputType="phone"
                android:maxLength="15"
                android:padding="@dimen/ten"
                android:textSize="@dimen/textsize_fourteen"
                android:layout_marginTop="@dimen/sixty"
                android:fontFamily="@font/regular"
                android:textColor="@color/blacktext"
                android:background="@drawable/square_box"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_edittxt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/mobileno_edittxt"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/twoenty"
                android:maxLength="40"
                android:padding="@dimen/ten"
                android:textSize="@dimen/textsize_fourteen"
                android:fontFamily="@font/regular"
                android:background="@drawable/square_box"
                android:textColor="@color/blacktext"
                />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgetpassword"
                style="@style/Widget.Normal.AppTextView"
               app:layout_constraintTop_toBottomOf="@+id/password_edittxt"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/forgetpassword"
                android:textSize="@dimen/textsize_twl"
                android:layout_marginTop="@dimen/ten"
                />


            <RelativeLayout
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/twoenty"
                android:background="@drawable/loginbtn_bg"
                app:layout_constraintTop_toBottomOf="@+id/forgetpassword"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.Normal.AppTextView"
                    android:layout_centerInParent="true"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_sixteen" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/donthaveaccount"
                style="@style/Widget.Normal.AppTextView"
                app:layout_constraintTop_toBottomOf="@+id/loginbtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/donthaveaccount"
                android:layout_marginTop="@dimen/twoenty"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signup"
                style="@style/Widget.Normal.AppTextView"
                app:layout_constraintTop_toBottomOf="@+id/donthaveaccount"
                android:text="@string/signup"
                android:textSize="@dimen/textsize_twoentytwo"
                android:textColor="@color/pink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>