<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <!--      <variable
                  name="viewModel"
                  type="com.example.myapplication.home.HomeViewModel" />-->
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topview"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/pink"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_icon"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/back_icon"
                android:layout_marginStart="@dimen/ten"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/latestvideosdestxt"
                style="@style/Widget.Normal.AppTextView"
                android:layout_centerInParent="true"
                android:text="@string/marketlenscalculator"
                app:layout_constraintStart_toEndOf="@+id/back_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:layout_marginStart="@dimen/twoenty"
                android:textSize="@dimen/textsize_twoentytwo" />




        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/topview">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/activity_bg">



                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/calculatorimg"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/calculatorfull_img"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <LinearLayout
                    android:id="@+id/marketlensdesclayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/calculatorimg"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/thirty"
                    android:layout_marginEnd="@dimen/thirty"
                    android:layout_marginTop="@dimen/thirty">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marketlenscalculator"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marketlenscalculatordesc"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/chooseplanlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/marketlensdesclayout"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/thirty"
                    android:layout_marginEnd="@dimen/thirty"
                    android:layout_marginTop="@dimen/thirty">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chooseaplan"

                        />



                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subscriptionperiod"
                        />
                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/signupbtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/twoenty"
                    android:background="@drawable/loginbtn_bg"
                    app:layout_constraintTop_toBottomOf="@+id/chooseplanlayout">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Widget.Normal.AppTextView"
                        android:layout_centerInParent="true"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_sixteen" />
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>