<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <data>
            <import type="android.view.View"/>
            <variable
                name="viewModel"
                type="com.rs.marketlens.viewModel.RegisterViewModel" />
        </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/twoenty">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/log_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/sixty"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/log_img"
                android:hint="@string/firstname"
                android:inputType="text"
                android:maxLength="15"
                android:padding="@dimen/ten"
                android:textSize="@dimen/textsize_fourteen"
                android:text="@{viewModel.fname}"
                android:onTextChanged="@{viewModel.onTextChangedFName}"
                android:layout_marginTop="@dimen/sixty"
                android:fontFamily="@font/regular"
                android:textColor="@color/blacktext"
                android:background="@drawable/square_box"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/firstname"
                android:hint="@string/lastname"
                android:inputType="text"
                android:layout_marginTop="@dimen/twoenty"
                android:maxLength="40"
                android:padding="@dimen/ten"
                android:textSize="@dimen/textsize_fourteen"
                android:text="@{viewModel.lname}"
                android:onTextChanged="@{viewModel.onTextChangedLName}"
                android:fontFamily="@font/regular"
                android:background="@drawable/square_box"
                android:textColor="@color/blacktext"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/lastname"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/twoenty"
                android:maxLength="40"
                android:padding="@dimen/ten"
                android:text="@{viewModel.email}"
                android:onTextChanged="@{viewModel.onTextChangedEmail}"
                android:textSize="@dimen/textsize_fourteen"
                android:fontFamily="@font/regular"
                android:background="@drawable/square_box"
                android:textColor="@color/blacktext"
                />



            <RelativeLayout
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/twoenty"
                android:background="@drawable/loginbtn_bg"
                android:onClick="@{() -> viewModel.regAccount()}"
                app:layout_constraintTop_toBottomOf="@+id/email"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.Normal.AppTextView"
                    android:layout_centerInParent="true"
                    android:text="@string/submit"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_sixteen" />

            </RelativeLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>