<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
  <!--      <variable
            name="viewModel"
            type="com.example.myapplication.home.HomeViewModel" />-->
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/twoenty"
            android:background="@color/activity_bg">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/saleviewpager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/saleslider"
                android:orientation="horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/ten"
                android:layout_gravity="bottom"
                app:layout_constraintTop_toBottomOf="@+id/saleviewpager"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/thirty"
                android:layout_height="wrap_content"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/topservicetxt"
                style="@style/Widget.Normal.AppTextView"
                android:layout_centerInParent="true"
                android:text="@string/ourservice"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/saleslider"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/blacktext"
                android:layout_marginStart="@dimen/fifteen"
                android:textSize="@dimen/textsize_fourteen" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topservicerecyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/topservicetxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/fifteen"
                android:layout_marginStart="@dimen/five"
                android:layout_marginEnd="@dimen/five"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layout_constraintTop_toBottomOf="@+id/topservicerecyclerview"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/fifteen"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/latestvideostxt"
                style="@style/Widget.Normal.AppTextView"
                android:layout_centerInParent="true"
                android:text="@string/latestvideos"
                android:layout_marginStart="@dimen/fifteen"
                app:layout_constraintTop_toBottomOf="@+id/topservicerecyclerview"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/blacktext"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/twoenty"
                android:textSize="@dimen/textsize_fourteen"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/latestvideosdestxt"
                style="@style/Widget.Normal.AppTextView"
                android:layout_centerInParent="true"
                android:text="@string/latestvideosdesc"
                app:layout_constraintTop_toBottomOf="@+id/latestvideostxt"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/darkgrey"
                android:layout_marginStart="@dimen/fifteen"
                android:textSize="@dimen/textsize_ten" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latestvideosrecyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/latestvideosdestxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/fifteen"
                android:layout_marginEnd="@dimen/ten"
                android:layout_marginStart="@dimen/five"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/onlineworkshoptxt"
                style="@style/Widget.Normal.AppTextView"
                android:layout_centerInParent="true"
                android:text="@string/onlineworkshop"
                android:layout_marginStart="@dimen/fifteen"
                app:layout_constraintTop_toBottomOf="@+id/latestvideosrecyclerview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/blacktext"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/thirty"
                android:textSize="@dimen/textsize_sixteen"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/begneradvtxt"
                style="@style/Widget.Normal.AppTextView"
                android:text="@string/forbegnieradvance"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@+id/onlineworkshoptxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/blacktext"
                android:layout_marginStart="@dimen/fifteen"
                android:textSize="@dimen/textsize_sixteen" />


            <FrameLayout
                android:id="@+id/workshopimagelayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@+id/begneradvtxt"
                android:layout_marginStart="@dimen/fifteen"
                android:layout_marginEnd="@dimen/fifteen"
                android:layout_marginTop="@dimen/ten"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/onlineworkshop"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/workshopimg"
                    android:scaleType="fitXY"
                    android:tint="#6F000000"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/playicon"
                    android:layout_gravity="center"
                    />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/followupimglayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@+id/workshopimagelayout"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/thirty"
                android:background="@drawable/followfbimg">


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.Normal.AppTextView"
                    android:text="@string/followusonfb"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="@dimen/fifteen"
                    android:textSize="@dimen/textsize_sixteen" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/connectnow"
                    style="@style/Widget.Normal.AppTextView"
                    android:text="@string/connectnow"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/ten"
                    android:paddingStart="@dimen/twoentyfive"
                    android:paddingEnd="@dimen/twoentyfive"
                    android:paddingTop="@dimen/ten"
                    android:paddingBottom="@dimen/ten"
                    android:background="@drawable/white_round"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="@dimen/fifteen"
                    android:textSize="@dimen/textsize_fourteen" />


            </LinearLayout>




            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="@dimen/twoenty"
                android:layout_marginStart="@dimen/fifteen"
                android:layout_marginEnd="@dimen/fifteen"
                app:layout_constraintTop_toBottomOf="@+id/followupimglayout"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/samplevideoimg"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/samplevidimg"
                    android:tint="@color/imagetrans"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/playicon"
                    app:layout_constraintTop_toTopOf="@+id/samplevideoimg"
                    app:layout_constraintBottom_toBottomOf="@+id/samplevideoimg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_gravity="center"
                    />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    app:layout_constraintTop_toBottomOf="@+id/samplevideoimg"
                    android:background="@android:color/white">


                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Widget.Normal.AppTextView"
                        android:text="@string/watchsamplevideo"
                        android:textAllCaps="true"
                        android:layout_gravity="center"
                        android:layout_centerInParent="true"
                        android:textColor="@color/blacktext"
                        android:layout_marginStart="@dimen/fifteen"
                        android:textSize="@dimen/textsize_fourteen" />

                </RelativeLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>